# Promad

./: Acapulco.drawio  Diagrama sin título.drawio  LICENSE  README.md
Acapulco/: Diagrama sin título.drawio
Launcher/: CMakeLists.txt
Launcher/config/: default_config.json
Launcher/include/: BrowserDetector.hpp  BrowserLauncher.hpp  CacheCleaner.hpp  ConfigManager.hpp  Logger.hpp  ProcessManager.hpp  ProfileManager.hpp
Launcher/src/: main.cpp
